# job-hunter-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  inspect_sdj.py  pyproject.toml  pytest_out.txt  requirements.txt  run.py  sdj_output.json  test_swissdevjobs.py
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 7b2a37169931_add_email_supabase_id_and_make_hashed_.py  7d76134d9a36_extract_scraped_jobs.py  a1b2c3d4e5f6_generalize_job_model.py  b3c4d5e6f7a8_add_missing_columns.py
backend/: .env.example  Dockerfile  database.py  fix_jobroom_urls.py  main.py  models.py  pre_start.py  schemas.py
backend/api/: api.py  auth.py  deps.py  jobs.py  profiles.py  schedules.py  search.py
backend/core/: config.py  exceptions.py
backend/db/: base.py
backend/models/: __init__.py  base_model.py  job.py  search_profile.py  user.py
backend/repositories/: base.py  job_repository.py  profile_repository.py
backend/routes/: auth.py  jobs.py  profiles.py  search.py
backend/schemas/: __init__.py  job.py  profile.py  user.py
backend/scraper/: __init__.py
backend/services/: auth.py  auth_factory.py  auth_supabase.py  job_service.py  llm.py  llm_service.py  profile_service.py  reference.py  scheduler.py  scraper.py  search_service.py  search_status.py  utils.py
frontend/: Dockerfile  build_error.txt  check_syntax.py  index.html  lint_out.txt  out.txt  package-lock.json  package.json
frontend/src/: App.css  api.js  (+3 more)
scripts/: run_e2e_benchmark.py
tests/: conftest.py  init_db.py
(+117 files in other folders)
